<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/sign_up_logo"
            android:transitionName="logo_image"
            android:contentDescription="@string/signupImage"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <!--        android:background="@drawable/rounded_corner"-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_message"
                android:textColor="#000"
                android:textSize="16sp"
                android:transitionName="logo_text"
                tools:ignore="UnusedAttribute" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_button"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:hint="@string/password"
                android:transitionName="password_tran"
                app:passwordToggleEnabled="true"
                tools:ignore="UnusedAttribute">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                app:cardCornerRadius="15dp">

                <Button
                    android:id="@+id/go_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#000"
                    android:minWidth="150dp"
                    android:text="@string/login"
                    android:textColor="#fff" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/forgot_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00000000"
                android:text="@string/forgot_password"
                android:textColor="#000"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:text="@string/username_message"
            android:textAlignment="center"
            android:textSize="12sp"
            android:transitionName="logo_desc"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</ScrollView>